--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.12.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.4.0"
   },
   "scripts": {
