--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -2,16 +2,19 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://andrerocha22.github.io/portfolio",
   "dependencies": {
     "@material-ui/core": "^4.9.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.4.0"
@@ -19,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
